[tool.poetry]
name = "grepper"
version = "0.1.0"
description = "A command-line utility that matches lines from input according to a pattern specification"
authors = ["Daniil Diatchenko <diatchenko@reksoft.ru>"]
license = "WTFPL"
readme = "README.md"
homepage = "https://github.com/flypd/Grepper"
repository = "https://github.com/flypd/Grepper"

[tool.poetry.scripts]
grepper = "grepper:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.black]
target_version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
